--- a/package.json
+++ b/package.json
@@ -24,21 +24,21 @@
     "@electron-toolkit/utils": "^2.0.0"
   },
   "devDependencies": {
-    "@electron-toolkit/eslint-config-prettier": "^1.0.1",
-    "@electron-toolkit/eslint-config-ts": "^1.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^18.17.5",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.4",
+    "autoprefixer": "^10.4.16",
     "electron": "^25.6.0",
     "electron-builder": "^24.6.3",
     "electron-vite": "^1.0.27",
     "eslint": "^8.47.0",
-    "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.0.2",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.6",
     "typescript": "^5.1.6",
     "vite": "^4.4.9"
   }
